# Numerical-PDE

./: .gitignore  README.en.md  README.md
Project 2 - Multigrid/: CMakeLists.txt  Makefile  README.md  draw1D.m  draw2D.m  gen.cpp  solve.cpp  test.sh
Project 2 - Multigrid/beamer/: College.sty  Makefile  slide.tex
Project 2 - Multigrid/examples/: CMakeLists.txt  solve1D.cpp  solve2D.cpp  test.json  test1-1-1.json  test1-1-2.json  test1-1-3.json  test1-1-4.json  test1-1-5.json  test1-1-6.json  test1-2-1.json  test1-2-4.json  test1-2-5.json  test1-2-6.json  test1-3-1.json  test1-3-3.json  test1-3-4.json  test1-3-5.json  test1-3-6.json  test1-4-1-V.json  test1-4-2-FMG.json  test1-4-3-V.json  test1-4-4-FMG.json  test1-5-1-full+qua.json  test1-5-1-inj+lin.json  test1-5-2-full+lin.json  test1-5-2-inj+lin.json  test1-5-3-full+lin.json  test1-5-3-inj+lin.json  test1-5-3-inj+qua.json  test1-5-4-full+lin.json  test1-5-4-inj+qua.json  test1-6-1.json  test1-6-2.json  test1-6-5.json  test1-6-6.json  test1-6-8.json  test2-1-1.json  test2-1-4.json  test2-1-5.json  (+99 more)
Project 2 - Multigrid/include/: BVP.h  matrix.h  solver.h  sparseMatrix.h
Project 2 - Multigrid/inputs/: test1-1-7.json  test1-2-2.json  test1-2-3.json  test1-2-7.json  test1-3-2.json  test1-3-7.json  test1-4-2-V.json  test1-4-4-V.json  test1-5-1-full+lin.json  test1-5-1-inj+qua.json  test1-5-2-inj+qua.json  test1-5-3-full+qua.json  test1-5-4-full+qua.json  test1-5-4-inj+lin.json  test1-6-10.json  test1-6-3.json  test1-6-4.json  test1-6-7.json  test1-6-9.json  test2-1-2.json  test2-1-3.json  test2-3-2.json  test2-3-3.json  test2-3-4.json  test2-3-5.json  test2-6-1.json  (+21 more)
(+478 files in other folders)
